--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
     "mongoose": "8.16.2",
+    "mongoose-unique-validator": "^4.0.1",
     "morgan": "^1.10.0",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
